# iaudit

./: .gitignore  Cargo.toml
cache/thinktank/1/: 红包簿.DOC
cache/thinktank/2/: 红包簿.xlsx
logs/: iaudit.log.2024-11-25  iaudit.log.2024-11-26
src/: blunder.rs  configuration.rs  domain.rs  dto.rs  helper.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/blunder/: document.rs  errchain.rs
src/configuration/: application.rs  client.rs  common.rs  itools.rs  postgres.rs  qdrant.rs  setting.rs
src/database/: qdrant.rs
src/domain/business/: document.rs
src/domain/request/: document.rs
src/domain/request/document/: generally.rs  thinktank.rs
src/dto/request/: document.rs
src/dto/request/document/: thinktank.rs
src/dto/transformer/document/: thinktank.rs
src/handler/: document.rs
src/handler/document/: thinktank.rs
src/helper/: cipher.rs  proxy.rs  regular.rs
src/route/: document.rs
src/service/: document.rs
src/service/document/: pipeliner.rs  thinktank.rs
