[package]
name = "iaudit"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.14.1" }
qdrant-client = { version = "1.12.1" }
serde = { version = "1.0.214", features = ["derive"] }
tracing-log = { version = "0.2.0" }
tracing-appender = { version = "0.2.3" }
tracing-actix-web = { version = "0.7.14" }
tracing-bunyan-formatter = { version = "0.3.9" }

[dependencies.secrecy]
version = "0.10.3"
default-features = false
features = ["serde"]

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.tracing]
version = "0.1.40"
default-features = false
features = ["log"]

[dependencies.tracing-subscriber]
version = "0.3.18"
default-features = false
features = ["registry", "env-filter"]
